$Id$

2012-12-03  Christian Franke  <franke@computer.org>

	Avoid usage of strcpy(), strcat(), sprintf().
	Use snprintf() instead or change type to std::string.
	Use array references instead of char pointers for parameters.

2012-12-03  Christian Franke  <franke@computer.org>

	smartd.cpp: Ignore a device from DEVICESCAN if a preceding smartd.conf
	entry for the same device exists.

2012-11-28  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Document smartd_warning.sh/cmd scripts and
	the new environment variables.
	Makefile.am: Replace smartd_warning.* paths on man pages.
	Reformat long sed commands.

2012-11-27  Christian Franke  <franke@computer.org>

	smartd.cpp: Remove trailing newlines from some MailWarning() strings.
	os_win32/smartd_warning.cmd: Fix SMARTD_MESSAGE with parentheses.

2012-11-25  Alex Samorukov  <samm@os2.kiev.ua>

       OpenBSD: remove dummy functions

2012-11-24  Christian Franke  <franke@computer.org>

	Windows: Add tool wtssendmsg.exe based on no longer
	used module os_win32/wtssendmsg.cpp.
	os_win32/smartd_warning.cmd: Fix wtssendmsg call.
	os_win32/installer.nsi: Install smartd_warning.cmd
	and wtssendmsg.exe.  Fix uninstall of old ChangeLog.

2012-11-23  Christian Franke  <franke@computer.org>

	Move MSVC10 project files to new directory os_win32/vc10.

2012-11-22  Christian Franke  <franke@computer.org>

	smartd: Move warning message formatting and mailer/command
	startup to new script SYSCONFDIR/smartd_warning.sh
	(Windows: smartd_warning.cmd).
	Add environment variables SMARTD_PREVCNT and SMARTD_NEXTDAYS.
	Remove host/domainname related code from smartd.cpp
	and configure.in

2012-11-22  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: implemeted support for -g/-s rcache and -g/-s wcache for SCSI
	devices to control read/write device cache.

2012-11-19  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: supports progress indicator on selftests 
	smartctl: prints rotation speed for SCSI drives, if supported