@@ -227,6 +227,15 @@ elif [ -f /etc/SuSE-release ] ; then
     if test -n "$SMARTD_DRIVEDB" ; then
        smartd_opts="$smartd_opts -B $SMARTD_DRIVEDB"
     fi
+    if test "$SMARTD_SAVESTATES" = "no" ; then
+	smartd_opts="$smartd_opts -s \"\""
+    fi
+    if test "$SMARTD_ATTRLOG" = "no" ; then
+	smartd_opts="$smartd_opts -A \"\""
+    fi
+    if test -n "$SMARTD_EXTRA_OPTS" ; then
+	smartd_opts="$smartd_opts $SMARTD_EXTRA_OPTS"
+    fi
 
     # Shell functions sourced from /etc/rc.status:
     #      rc_check         check and set local and overall rc status
@@ -269,7 +278,7 @@ elif [ -f /etc/SuSE-release ] ; then
 
 	    # We don't use startproc - we need to check for return code 17.
 	    if ! /sbin/checkproc $SMARTD_BIN ; then
-		$SMARTD_BIN $smartd_opts
+		eval $SMARTD_BIN$smartd_opts
 		# Remember status and be verbose
 		if test $? -ne 17 ; then
 		    rc_status -v
